<resources>
    <string name="app_name">Карта Желаний</string>
    <string name="title_activity_volunteer_map">Map</string>
    <string name="title_activity_person_map">Map</string>
    <string name="phone_number_hint_text">Phone number</string>
    <string name="action_sign_in">Register</string>
    <string name="code_confirmation_hint_text">Verification code</string>
    <string name="confirm_button_text">Confirm</string>
    <string name="have_question">Have a question?</string>
    <string name="haveQ">For all questions and suggestions, you can contact the developers</string>
    <string name="mapintro">\"Карта желаний\" is an application with which everyone can try themselves as a volunteer, or get proper help by leaving a sticker with their location on the map, as well as describe the help that is needed in the personal account. As a volunteer, you can gain a rating of goodness by helping people</string>
    <string name="russian_lanuage">Рус</string>
    <string name="kyrgyz_lanuage">Кырг</string>
    <string name="english_lanuage">Eng</string>
    <string name="chat_title">Chat</string>
    <string name="rating_title">Rating</string>
    <string name="cabinet_title">Personal profile</string>
    <string name="questions_title">Questions and suggestions</string>
    <string name="language_title">Language</string>
    <string name="exit_title">Exit</string>
    <string name="user_volunteer">Volunteer</string>
    <string name="user_regular">Regular user</string>
    <string name="enter_valid_number">Enter valid number</string>
    <string name="enter_valid_code">Enter valid code</string>
    <string name="need_help_request">I need help</string>
    <string name="need_help_alert_title">I need</string>
    <string name="cancel_help_request">cancel</string>
    <string name="name_text_hint">Full name</string>
    <string name="problem_text_hint">Problem (if not a volunteer)</string>
    <string name="save_text_hint">Save</string>
    <string name="want_to_help_text">I want to help</string>
    <string name="need_help_text">I need help</string>
    <string name="click_to_write_text">Click to write</string>
    <string name="enter_message_hint">Enter message…</string>
    <string name="you_sender_text">You:</string>
    <string name="hero_mode_text">Hero mode</string>
    <string name="this_is_you_warning">This is you!</string>
    <string name="help_text">Help</string>
    <string name="call_by_phone_text">Call directly by phone</string>
    <string name="send_whatsapp_text">Send a message to WhatsApp</string>
    <string name="goto_chat_help">Click on the button to go to the chat and help the person</string>
    <string name="permission_granted_alert">Permission already granted</string>
    <string name="please_grant_permission_alert">Please grant the location permission</string>
    <string name="otp_error_occurred">An error occurred, please try again later!</string>
    <string name="resend_code_text">Resend code</string>
    <string name="welcome_title">Welcome!</string>
    <string name="map_title">Google Map</string>
    <string name="map_description">Click on the \"I need help\" button to leave a sticker on the map</string>
    <string name="chat_description">As a volunteer, you can write to a person in the chat, constantly check the chat if you left a help sticker</string>
    <string name="psychological_help">Psychological Help</string>
    <string name="change_lan">Language change</string>
    <string name="project_info_ru">\tВ январе 2020 года в партнерстве с Правительством Кыргызской Республики ЕС и ООН запустили многолетнюю страновую программу в рамках глобальной Инициативы “Луч света” (Spotlight Initiative) по искоренению всех форм насилия в отношении женщин и девочек. Цель программы - создать среду, в которой все женщины и девочки в Кыргызстане, особенно наиболее уязвимые, живут без насилия и пагубных практик, в том числе детских браков и ала качуу. Программа включает комплекс интегрированных мер в области политики и законодательства, укрепления институтов, предотвращения насилия, предоставления услуг пострадавшим от насилия, сбора качественных данных и поддержки женского движения и гражданского общества. Программа реализуется пятью агентствами ООН (ООН-Женщины, ЮНФПА, ПРООН, ЮНИСЕФ и УНП ООН) под общим руководством Постоянного Координатора ООН в Кыргызской Республике.</string>
    <string name="project_info_kg">\t2020-жылдын январында Кыргыз Республикасынын Өкмөтү менен өнөктөштүктө аялдар менен кыздарга карата зомбулуктун бардык формаларын түп-тамырынан бери жок кылуу боюнча ЕБ менен БУУнун “Спотлайт” глобалдуу демилгесинин (Spotlight Initiative) алкагында көп жылдык өлкөлүк программаны ишке киргизишти.  Программанын максаты – Кыргызстандагы бардык аялдар менен кыздар, өзгөчө – аялуу катмардагылар зомбулуксуз жана зыяндуу практикасыз, анын ичинде - жаштайынан никеге тургузуу жана ала качуусуз жашаган чөйрөнү түзүү болуп саналат. Программа саясат жана мыйзамдар, институттарды бекемдөө, зомбулукту болтурбоо, зомбулуктан жабыр тарткандарга кызмат көрсөтүү, сапаттуу маалыматтарды топтоо жана аялдар кыймылдары менен жарандык коомду колдоо жаатындагы интеграцияланган чаралардын комплексин камтыйт. Программа БУУнун Кыргыз Республикасындагы Туруктуу Координаторунун жалпы жетекчилиги алдында  БУУнун беш агенттиги тарабынан ишке ашырылат (БУУ-Аялдар, ЮНФПА, БУУӨП, ЮНИСЕФ жана БУУ БКБ).</string>
    <string name="project_info">\tIn January 2020, in partnership with the Government of the Kyrgyz Republic, the EU and UN launched a multi-year country program under the global Spotlight Initiative to eliminate all forms of violence against women and girls. The goal of the program is to create an environment in which all women and girls in Kyrgyzstan, especially the most vulnerable, live without violence and harmful practices, including child marriage and ala kachuu. The program includes a set of integrated policies and legislation, strengthening institutions, preventing violence, providing services to survivors of violence, collecting quality data and supporting the women\'s movement and civil society. The program is implemented by five UN agencies (UN Women, UNFPA, UNDP, UNICEF and UNODC) under the overall leadership of the UN Resident Coordinator in the Kyrgyz Republic.</string>
</resources>