<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/wallpaper"
    android:gravity="center"
    tools:context=".ui.questions.QuesionActivity">

    <TextView
        android:id="@+id/haveQuestion"
        android:layout_margin="?actionBarSize"
        android:textStyle="bold"
        android:textSize="40sp"
        android:textColor="#fff"
        android:gravity="center"
        android:text="@string/have_question"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/applicationInformation"
        android:text="@string/mapintro"
        android:textColor="#fff"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_margin="10dp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/haveQuestion"
        />

    <TextView
        android:id="@+id/contactDevelopers"
        android:text="@string/haveQ"
        android:textColor="#fff"
        android:textColorHint="#eee"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="20sp"
        android:layout_marginTop="40dp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/applicationInformation"/>

    <LinearLayout
        android:id="@+id/contacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contactDevelopers"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/instagram"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/ic_instagram" />

    </LinearLayout>
    
</androidx.constraintlayout.widget.ConstraintLayout>