<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.login.ProfileActivity"
    android:background="@drawable/help1"
    android:id="@+id/medcardFormLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:gravity="center">

        <RelativeLayout
            android:id="@+id/userPictureCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <!--    <androidx.cardview.widget.CardView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:elevation="12dp"
                android:shape="ring"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:onClick="selectPictureFromGallery"
                app:cardCornerRadius="50dp">

                <ImageView
                    android:id="@+id/profilePicture"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:scaleType="centerCrop"  
                    android:adjustViewBounds="true"
                    android:src="@drawable/picture"/>
            </androidx.cardview.widget.CardView>-->

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profilePicture"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:scaleType="centerCrop"
                android:layout_marginTop="20dp"
                app:civ_border="false"
                android:onClick="selectPictureFromGallery"
                android:layout_marginBottom="16dp"
                android:src="@drawable/picture"/>
        </RelativeLayout>
        <LinearLayout
            android:id="@+id/nameTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@id/userPictureCard"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/keypad_bg2"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"
                android:paddingLeft="13dp"
                android:paddingRight="13dp"
                android:textColor="@color/white"
                android:background="@color/transparent"
                android:hint="@string/name_text_hint"
                android:inputType="textCapWords|textCapSentences"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/problemTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/nameTextLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/keypad_bg2"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/problemEditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"
                android:paddingLeft="13dp"
                android:paddingRight="13dp"
                android:textColor="@color/white"
                android:background="@color/transparent"
                android:hint="@string/problem_text_hint"
                android:inputType="textCapWords|textCapSentences"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/phoneTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/problemTextLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/keypad_bg2"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/phoneEditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"
                android:paddingLeft="13dp"
                android:paddingRight="13dp"
                android:textColor="@color/white"
                android:background="@color/transparent"
                android:text="+996"
                android:hint="@string/phone_number_hint_text"
                android:inputType="phone"
                android:singleLine="true" />
        </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/saveProfile"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:background="@drawable/keypad_bg2"
        android:layout_marginTop="100dp"
        android:textColor="@color/white"
        android:onClick="saveUserInformation"
        app:layout_constraintTop_toBottomOf="@id/phoneTextLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="textCapSentences"
        android:text="@string/save_text_hint"
        android:textSize="18dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/backButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:onClick="backButton"
        android:background="@drawable/keypad_bg"
        app:layout_constraintTop_toBottomOf="@id/saveProfile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="textCapSentences"
        android:text="Назад"
        android:textSize="18dp"
        android:visibility="invisible"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
